gccida/g1/can_disregard_other_sets
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3888:27: error: use of undeclared identifier 'uid_cuid_1'
v15 = *( ( unsigned int *)uid_cuid_1 + v14); 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3889:46: error: use of undeclared identifier 'uid_cuid_1'
v16 = reaching_defs[v13]->elms[*( ( _DWORD *)uid_cuid_1 + v14) >> 6]; 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3892:96: error: use of undeclared identifier 'uid_cuid_1'
if ( v13 == *( _DWORD *)( basic_block_for_insn->data.l[v14] + 88) && ( int)v15 < *( ( _DWORD *)uid_cuid_1 + rtint) ) 
                                                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3894:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( __int16 *)v11[2]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3912:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int64)v3->insn[2]; 
               ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/gcse.c:3924:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)v3->insn[2]; 
                ^~~~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/can_disregard_other_sets/src/obj/gcse.o] Error 1
